fix dark mode

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --bg-bar: #f4f4f5;
     --bg-color: white;
     --mode: "light";
-    --shadow-color: #18181b4d;
+    --shadow-color: #18181b33;
 }
 
 * {
@@ -70,7 +70,7 @@ nav {
     border-radius: 50px;
     border: 2px;
     background-color: var(--bg-bar);
-    box-shadow: 2px 2px 5px 1px var(--shadow-color);
+    box-shadow: 1px 1px 4px 0.5px #18181b33;
     /*transition: all 0.3s ease-out;*/
 }
 
@@ -112,7 +112,7 @@ button {
     font-size: 1.2em;
     color: var(--medium-color);
     background-color: var(--bg-bar);
-    box-shadow: 2px 2px 5px 1px var(--shadow-color);
+    box-shadow: 1px 1px 4px 0.5px #18181b33;
 }
 /*
 .btn {
